--- a/css/eralylab_style.css
+++ b/css/eralylab_style.css
@@ -8,34 +8,6 @@ body
     color: #333;
 }
 
-header 
-{
-    background: #500000;
-    color: #fff;
-    padding: 10px 10px 0 10px;
-    text-align: center;
-}
-
-main
-{
-    width: 100vw;
-    text-align: center;
-}
-
-section
-{
-    width: 90%; /* 90% width of the parent (main) */
-    margin: 0 auto; /* Automatically centers the element horizontally */
-    /*background-color: lightblue; /* Optional: For visualization */
-    padding: 20px; /* Optional: Adds some inner spacing */
-    box-sizing: border-box; /* Ensures padding is included in width */
-
-    /* set the columns */
-    display: flex; /* Enables Flexbox */
-    align-items: flex-start; /* Aligns columns at the top */
-    gap: 20px; /* Adds space between columns */
-}
-
 footer 
 {
     text-align: center; /* Center-aligns inline-block elements */
@@ -57,238 +29,9 @@ a
     cursor: pointer;
 }
 
-
-/* #id */
-#Header_COL1 /* Header_COL1 section */
-{   
-    display: inline-flex;
-    align-items: center; /* vertical aligment for flex */
-    /*background-color: #eeff00;*/
-    text-align: left;
+/* Wrapper: Flexbox for layout -- make footer always at bottom (by streaching main to 100vh with flex: 1)*/
+.Wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
-
-#Header_LOGO
-{
-    width: 8%;
-}
-
-#Header_COL2 /* Header_COL2 section */
-{
-    /*background-color: #4CAF50;*/
-    padding: 10px 10px 0 10px;
-}
-
-#Header_TITLE
-{
-    font-family: helvetica-w01-roman, helvetica-w02-roman, helvetica-lt-w10-roman, sans-serif;
-    font-size: 16px;
-    margin: 25px;
-}
-
-#Header_NAVIGATION
-{
-    float: right;
-    /*border: 1px solid red;*/
-    /*border: 1px solid #ddd;*/
-    padding: 10px 10px 0 10px;
-}
-
- #Header_NAVIGATION ul
- {
-    margin: 0;            /* Remove default margin */
-    padding: 0;           /* Remove default padding */
-    list-style: none;     /* Remove default bullets */
- }
-/* id# */
-
-
-/* .class */
-.Header_COL
-{
-    width: 45%; /* 50% of the header width */
-    display: inline-block; /* Makes the divs inline-block */    
-    box-sizing: border-box; /* Include padding in width calculation */    
-    padding: 10px 10px 0 10px;
-}
-
-.TAB 
-{
-    width: auto;
-    font-size: 0.8vw; /* 2% of the viewport's width */
-    font-weight: bold; /* Makes text bold */    
-    color: #d1d1d1;
-    display: inline-block; /* Makes the divs inline-block */
-    /*background-color: lightcoral;*/
-    text-align: center;
-    padding: 20px;
-    /*border: 1px solid #333;*/
-}
-
-.TAB a 
-{
-    padding-top: 15px;
-}
-
-.TAB a:hover
-{
-    color: white;
-    border-top: 3px solid #ffffff;
-}
-
-.Main_COL /* Main_COL section (40% width) */
-{
-    width: 40%; /* 40% of the header width */
-    padding: 10px;
-    box-sizing: border-box; /* Include padding in width calculation */
-}
-
-.Main_COL1 /* Main_COL1 */
-{
-    flex: 1; /* Allows the column to adjust its size */
-    /*background-color: #eeff00;*/
-    text-align: left;    
-}
-
-.Main_COL2 /* Main_COL2 */
-{
-    /*background-color: #4CAF50;*/
-    text-align: center;
-}
-
-.Main_TITLE
-{
-    text-align: left;
-    font-size: 3vw; /* 5% of the viewport's width */
-    margin: 0;
-    padding: 10px;
-}
-
-.Main_LABLE
-{
-   display: block;
-}
-
-.Main_TEXT
-{
-    text-align: left;   
-    font-size: 1.2vw;
-    padding: 10px;
-}
-
-.Section_HEADER
-{
-    font-size: 1.8vw;
-    padding: 10px;
-}
-
-.Section_TITLE
-{
-    font-size: 1.4vw;
-    padding: 10px;
-}
-
-.Section_LABLE
-{
-    text-align: center;
-    font-size: 1.4vw;
-    padding: 10px;
-    margin: auto;
-}
-
-.Section_SUBLABLE
-{
-    text-align: left;
-    font-size: 1vw;
-    padding: 10px;
-    width: 60%;
-    margin: auto;
-}
-
-.SUBLABLE_TEXT
-{    
-    width: 60%;
-    margin: auto;
-}
-
-.Section_TEXT
-{
-    font-size: 0.7vw;
-    padding: 10px;
-}
-
-.Section112, .Section1UList, .Section2ColBlockBlock, .Section11U, .Section1I
-{
-    display: block;
-    text-align: left;
-}
-
-.SectionBlock
-{
-}
-
-.Section2ColBlock
-{
-    display: flex;
-    text-align: center;
-}
-
-.SectionBlockCol
-{
-    margin: auto;
-}
-
-.Section2ColTable
-{
-    display: flex;
-    width: 80%;
-    margin: auto;
-}
-
-.Table_COL
-{
-
-}
-
-.Table_COL1
-{
-    width: 40%;
-}
-
-.Table_COL1 img
-{
-    width: 50%;
-    margin: 20px auto;
-}
-
-.Table_COL2
-{
-    width: 60%;
-    margin-top: 25px;
-}
-
-.Table_HEADER
-{
-    font-size: 1.2vw;
-    padding: 10px;
-}
-
-.Table_SUBHEADER
-{
-    font-size: 0.8vw;
-    padding: 10px;
-}
-
-.InlineLI
-{
-    display: flex;
-    margin: 0;            /* Remove default margin */
-    padding: 0;           /* Remove default padding */
-    list-style: none;     /* Remove default bullets */
-
-}
-
-.InlineLI a
-{
-    margin: 0 5px;
-}
-/* class. */
